--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "eslint-config-next": "^14.2.33",
+    "eslint-config-next": "^16.0.5",
     "next": "^14.2.33",
+    "qrcode": "^1.5.4",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.0",
